--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/audio/
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
