--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_tts: ^4.2.3
   audioplayers: ^6.5.1
+  supabase_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
