--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_tts: ^4.2.3
   audioplayers: ^6.5.1
   supabase_flutter: ^2.0.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
