--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/images/
     - assets/audio/
+    - .env
 
 
   # To add assets to your application, add an assets section, like this:
