--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
+    - assets/images/hiragana/
+    - assets/images/hair/
     - assets/audio/
     - .env
 
