--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   audioplayers: ^6.5.1
   supabase_flutter: ^2.0.0
   flutter_dotenv: ^5.2.1
+  youtube_player_flutter: ^9.1.3
 
 dev_dependencies:
   flutter_test:
