--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  parameterized_test: 2.0.2
   test:
 
   # The "flutter_lints" package below contains a set of recommended lints to
