--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   supabase_flutter: ^2.0.0
   flutter_dotenv: ^5.2.1
   youtube_player_flutter: ^9.1.3
+  equatable: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
