--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   youtube_player_flutter: ^9.1.3
   equatable: ^2.0.0
+  flutter_launcher_icons: ^0.14.4
 
 
 dev_dependencies:
@@ -56,6 +57,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
+flutter_icons:
+  ios: true
+  image_path: "assets/images/launcher/icon_ios.png"
+  remove_alpha_ios: true
+  android: true
+  adaptive_icon_background: "assets/images/launcher/icon_adaptive_background.png"
+  adaptive_icon_foreground: "assets/images/launcher/icon_adaptive_foreground.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
