--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   youtube_player_flutter: ^9.1.3
   equatable: ^2.0.0
   flutter_launcher_icons: ^0.14.4
+  flutter_riverpod: ^3.0.3
 
 
 dev_dependencies:
