--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,15 @@ dependencies:
   equatable: ^2.0.0
   flutter_launcher_icons: ^0.14.4
   flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   parameterized_test: 2.0.2
+  build_runner: ^2.3.3
+  riverpod_generator: ^3.0.3
   test:
 
   # The "flutter_lints" package below contains a set of recommended lints to
