--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_riverpod: ^3.0.3
   riverpod_annotation: ^3.0.3
+  google_generative_ai: ^0.4.7
 
 
 dev_dependencies:
