--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_riverpod: ^3.0.3
   riverpod_annotation: ^3.0.3
   google_generative_ai: ^0.4.7
+  flutter_svg: ^2.2.3
 
 
 dev_dependencies:
