--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   riverpod_annotation: ^3.0.3
   google_generative_ai: ^0.4.7
   flutter_svg: ^2.2.3
+  http: ^1.6.0
 
 
 dev_dependencies:
