--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_generative_ai: ^0.4.7
   flutter_svg: ^2.2.3
   http: ^1.6.0
+  image_picker: ^1.2.1
 
 
 dev_dependencies:
